# caviar

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/caviar/: cell.py  main.py  params.py
